--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -5,6 +5,12 @@ html {
   font-size: 12px;
 }
 
+button:hover {
+  background-color: #222;
+  cursor: pointer;
+  transition: 200ms;
+}
+
 .field {
   border: 1px solid #ccc;
   border-radius: 4px;
