--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -6,7 +6,7 @@ html {
 }
 
 button:hover {
-  background-color: #222;
+  background-color: rgb(168, 152, 152);
   cursor: pointer;
   transition: 200ms;
 }
