--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -3,6 +3,11 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 12px;
+  justify-content: center;
+}
+
+body {
+  background-color: rgb(247, 216, 241);
 }
 
 button:hover {
