added length + fixes

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -50,9 +50,11 @@
   </table>
   <div id="image"></div>
   <div id="info"></div>
+  <div id="tripLength"></div>
+  <footer>
+    <p>&copy; Lachlan Bardwell 2021</p>
+  </footer>
 </body>
-<footer>
-  <p>&copy; Lachlan Bardwell 2021</p>
-</footer>
+
 
 </html>
