--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -54,6 +54,16 @@
   <footer>
     <p>&copy; Lachlan Bardwell 2021</p>
   </footer>
+  <script>
+    // Check that service workers are supported
+    if ('serviceWorker' in navigator) {
+      // Use the window load event to keep the page load performant
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/service-worker.js');
+      });
+    }
+
+  </script>
 </body>
 
 
