small css + html

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -14,7 +14,7 @@
     <tbody>
       <tr>
         <td>
-          <label for="destination">Destination City</label>
+          <label for="destination">Destination City:</label>
         </td>
         <td colspan="2">
           <input class="field" type="text" placeholder="Enter destination here" id="destination" />
@@ -22,7 +22,7 @@
       </tr>
       <tr>
         <td>
-          <label for="from-date">From Date</label>
+          <label for="from-date">From Date:</label>
         </td>
         <td colspan="2">
           <input class="field" type="date" id="from-date" />
@@ -30,7 +30,7 @@
       </tr>
       <tr>
         <td>
-          <label for="to-date">To Date</label>
+          <label for="to-date">To Date:</label>
         </td>
         <td colspan="2">
           <input class="field" type="date" id="to-date" />
