--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -2,15 +2,27 @@ html {
   color: #222;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 12px;
+  font-size: 16px;
 }
 
 body {
-  background-color: rgb(247, 216, 241);
+  background-color: #f7d8f1;
+}
+
+body > h1 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-align: center;
+  color: #550644;
+}
+
+button {
+  font-size: 22px;
+  border: none;
+  border-radius: 25%;
 }
 
 button:hover {
-  background-color: rgb(226, 200, 200);
+  color: #e06eba;
   cursor: pointer;
   transition: 200ms;
 }
@@ -40,6 +52,7 @@ button:hover {
 }
 .weather-forecast-table > tbody > tr > td:first-child {
   font-weight: 600;
+  color: #550644;
 }
 
 .weather-forecast-table > tbody > tr > td {
